--- a/DisposableVms.html
+++ b/DisposableVms.html
@@ -15,6 +15,10 @@
 <p><strong>Note:</strong> Normally there should be no need for doing this -- this is just for Qubes hackers ;)</p>
 <pre class="wiki"><code>[joanna@dom0 ~]$ echo gnome-terminal | /usr/lib/qubes/qfile-daemon-dvm qubes.VMShell dom0 DEFAULT red</code></pre>
 <p>In fact the Disposable VM appmenu used for starting Firefox contains a very similar command to the above. Please note, however, that it generally makes little sense to start any other application other than a Web Browser this way...</p>
+<h2 id="StartinganarbitraryprograminaDisposableVMfromanAppVM">Starting an arbitrary program in a Disposable VM from an AppVM</h2>
+<p>Sometimes it might be useful to start an arbitrary program, such as e.g. terminal in an Disposable VM from an AppVM. This could be simply done this way:</p>
+<pre class="wiki"><code>[user@vault ~]$ qvm-run &#39;$dispvm&#39; gnome-terminal</code></pre>
+<p>Note the above command is issued in an AppVM, not in Dom0. The created Disposable VM can be normally accessed via other tools, such as e.g. <code>qvm-copy-to-vm</code>, using its 'dispX' name, as shown by the Qubes Manager or <code>qvm-ls</code> tools. The created Disposable VM will inherit firewall settings of the ancestor VM, which is useful in some cases (e.g. when the original AppVM had networking cut off).</p>
 <h2 id="Usinganon-defaulttemplateasabasisforDisposableVM">Using a non-default template as a basis for Disposable VM</h2>
 <p>In some situations it might be beneficial to use a non-default template as a basis for Disposable VM. One example is to use a less-trusted template with some less trusted, 3rd party, often unsigned, applications installed, such as e.g. 3rd part printer drivers.</p>
 <p>In order to regenerate Disposable VM &quot;snapshot&quot; (called 'savefile' on Qubes) one can conveniently use the following command in Dom0:</p>
