--- a/Qrexec.html
+++ b/Qrexec.html
@@ -20,6 +20,10 @@
 <li>qubes.<a href="/wiki/wiki/ReceiveUpdates">ReceiveUpdates?</a></li>
 <li>qubes.<a href="/wiki/wiki/SyncAppMenus">SyncAppMenus?</a></li>
 <li>qubes.VMShell</li>
+<li>qubes.<a href="/wiki/wiki/ClipboardPaste">ClipboardPaste?</a></li>
+<li>qubes.Gpg</li>
+<li>qubes.<a href="/wiki/wiki/NotifyUpdates">NotifyUpdates?</a></li>
+<li>qubes.<a href="/wiki/wiki/PdfConvert">PdfConvert?</a></li>
 </ul>
 <p>These files contain lines with the following format:</p>
 <p>srcvm destvm (allow|deny|ask)[,user=user_to_run_as][,target=VM_to_redirect_to]</p>
