--- a/HCL.html
+++ b/HCL.html
@@ -145,6 +145,15 @@
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
+<p>Lenovo Thinkpad T430<br /> (Ivy Bridge; HD Graphich; i5-3360M; BIOS: 2.51)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/LSVluAZ9Udo/Fl3jmt4tWssJ">Alex Dubois</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
@@ -183,6 +192,10 @@
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​read more</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​Outback Dingo</a></p>
 <p>Sony Vaio Z2<br /> (2011 edition)</p>
 <p>OK</p>
