--- a/HCL.html
+++ b/HCL.html
@@ -153,6 +153,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/LSVluAZ9Udo/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LSVluAZ9Udo/Fl3jmt4tWssJ">Alex Dubois</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
