--- a/HCL.html
+++ b/HCL.html
@@ -213,6 +213,16 @@
 <p>X</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/oox94EsIduQ/7w4xUoK5pxwJ">m astroj</a></p>
+<p>MSI Big Bang<br /> (i7-950; Radeon HD 6770)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
 <h2 id="Submittingnewresults">Submitting new results</h2>
 <p>If you want to submit any new data please run 'qubes-hcl-report' script (in dom0) and send the results to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
 <ul>
