--- a/HCL.html
+++ b/HCL.html
@@ -197,6 +197,7 @@
 <p>OK</p>
 <p>X</p>
 <p>?</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/Wu1mn9f1qgM/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​Outback Dingo</a></p>
 <p>Sony Vaio Z2<br /> (2011 edition)</p>
 <p>OK</p>
