--- a/HCL.html
+++ b/HCL.html
@@ -136,7 +136,7 @@
 <p>?</p>
 <p>needs kernel downgrade to 3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
-<p>HP Pavilion Sleekbook 14-B030TU<br /> (Ivy Bridge; Intel HD Graphich; i5-3317; BIOS F.06)</p>
+<p>HP Pavilion Sleekbook 14-B030TU<br /> (Ivy Bridge; Intel HD Graphics; i5-3317; BIOS F.06)</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -145,7 +145,7 @@
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
-<p>Lenovo Thinkpad T430<br /> (Ivy Bridge; HD Graphich; i5-3360M; BIOS: 2.51)</p>
+<p>Lenovo Thinkpad T430<br /> (Ivy Bridge; HD Graphics; i5-3360M; BIOS: 2.51)</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
