--- a/UserDoc.html
+++ b/UserDoc.html
@@ -14,6 +14,7 @@
 <li><a href="/wiki/wiki/BackupRestore">Qubes Backup/Restore/Migration</a></li>
 <li><a href="/wiki/wiki/QubesPolicies">Central policies for inter-VM services?</a></li>
 <li><a href="/wiki/wiki/NetworkPrinter">Configuring a network printer</a></li>
+<li><a href="/wiki/wiki/ResizeDiskImage">Resizing AppVMs and HVMs virtual disks</a></li>
 </ul>
 <p>Advanced topics:</p>
 <ul>
