--- a/HCL.html
+++ b/HCL.html
@@ -129,6 +129,14 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/LSVluAZ9Udo/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LSVluAZ9Udo/Fl3jmt4tWssJ">Alex Dubois</a></p>
+<p>Lenovo Thinkpad T430U<br /> (Ivy Bridge; HD Graphics +GT 620M; i7-3517M; BIOS: 2.08)</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/Z9M_k3i6dxU/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/Z9M_k3i6dxU/09CqBppyMnsJ">tigerbeard</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
