--- a/HCL.html
+++ b/HCL.html
@@ -80,6 +80,15 @@
 <p>*</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​Stephen Boyd</a></p>
+<p>ASUS X55A</p>
+<p>X</p>
+<p>X</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
+<p>X</p>
+<p>X</p>
+<p>X</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/2csjvHia9Rw/NRsqR0g6wIMJ">​Zrubi</a></p>
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
