--- a/HCL.html
+++ b/HCL.html
@@ -130,6 +130,13 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
+<p>Lenovo Thinkpad Edge E130<br /> (Ivy Bridge; HD Graphics i3-3217U; BIOS: 2.05)</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/kGnZKZ9ILKA/2vpzltNW3K4J">Danny Cautaert</a></p>
 <p>Lenovo Thinkpad T430<br /> (Ivy Bridge; HD Graphics; i5-3360M; BIOS: 2.51)</p>
 <p>?</p>
 <p>?</p>
