--- a/QubesLists.html
+++ b/QubesLists.html
@@ -1,10 +1,43 @@
 <h1 id="QubesMailingLists">Qubes Mailing Lists</h1>
-<p>Please send all the questions regarding Qubes to the mailing list:</p>
+<p>Please send all the questions regarding Qubes to one of the following mailing lists:</p>
+<h2 id="Thequbes-usersmailinglist">The <code>qubes-users</code> mailing list</h2>
+<p>This list is for helping users solve various daily problems with Qubes OS. Example of topics or questions suitable for this list:</p>
 <ul>
-<li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
-<li>The Web interface: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
+<li>Installation problems</li>
+<li>Hardware compatibility problems</li>
+<li>How do I do...?</li>
+<li>HCL reports</li>
 </ul>
-<p><strong>RTFM</strong>: Before posting to the list, please make sure you read the <a href="/wiki/wiki/QubesDocs">documentation section</a>, especially the <a href="/wiki/wiki/UserDoc">User Guides</a>!</p>
-<p>To post to a group you don't need to subscribe, just send a message to the group's email address.</p>
-<p>You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
-<pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
+<p>You don't need to subscribe to post to this list. However, subscribing might still be a good idea, because: 1) you make sure your message will not be eaten by the Google Groups spam filter, and 2) you will get other messages direct to the list.</p>
+<p>Please consult the basic documentation before posting to the list:</p>
+<ul>
+<li><a href="/wiki/wiki/QubesDownloads">Installation guides and HCL</a> &lt;-- for problems related to Qubes OS installation</li>
+<li><a href="/wiki/wiki/UserFaq">Qubes User's FAQ</a></li>
+<li><a href="/wiki/wiki/UserDoc">Qubes User Guides</a> &lt;-- for question on how to use Qubes OS</li>
+</ul>
+<h3 id="PostingSubscribingetc">Posting, Subscribing, etc</h3>
+<ul>
+<li>To post a message to the list, just send an email to (you don't need to be subscribed): <code>qubes-users@googlegroups.com</code></li>
+<li>To subscribe to the list, send an empty mail to (you don't need a gmail account for that!): <code>qubes-users+subscribe@googlegroups.com</code></li>
+<li>To unsubscribe, send an empty mail to <code>qubes-users+unsubscribe@googlegroups.com</code></li>
+<li>The Web interface of the list: <a href="http://groups.google.com/group/qubes-users">​http://groups.google.com/group/qubes-users</a></li>
+</ul>
+<h2 id="Thequbes-develmailinglist">The <code>qubes-devel</code> mailing list</h2>
+<p>This list is mainly for people interested in contributing to Qubes OS, or just willing to learn more about its architecture and implementation. Example of topics and questions suitable for this list:</p>
+<ul>
+<li>Questions about why we made certain architecture or implementation decisions to implement XYZ this way and not the other way?</li>
+<li>Questions about code layout and where is code for certain functionality</li>
+<li>&quot;I would like to implement feature XYZ....&quot; -- discussions about proposed new features, patches, etc.</li>
+<li>Contributed code and patches</li>
+<li>Some more or less generic security discussions, somehow relating to Qubes OS</li>
+</ul>
+<p>You need to be subscribed in order to post to this list.</p>
+<h3 id="PostingSubscribingetc1">Posting, Subscribing, etc</h3>
+<ul>
+<li>To post a message to the list, send an email to (you need to be subscribed first!): <code>qubes-devel@googlegroups.com</code></li>
+<li>To subscribe to the list, send an empty mail to (you don't need a gmail account for that!): <code>qubes-devel+subscribe@googlegroups.com</code></li>
+<li>To unsubscribe, send an empty mail to <code>qubes-devel+unsubscribe@googlegroups.com</code></li>
+<li>The Web interface of the list: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
+</ul>
+<h2 id="Generalhintsandguidlinesregardingpostingtothelists">General hints and guidlines regarding posting to the lists</h2>
+<p>TODO</p>
