--- a/QubesLists.html
+++ b/QubesLists.html
@@ -1,5 +1,5 @@
 <h1 id="QubesMailingLists">Qubes Mailing Lists</h1>
-<p>Please send all the questions regarding Qubes to one of the following mailing lists:</p>
+<p>Please send all the questions regarding Qubes to one of the following mailing lists. Please do <strong>not</strong> send questions to individual Qubes developers. By sending a message to list, you not only give other a chance to help you, but you also might help others by making the discussion public.</p>
 <h2 id="Thequbes-usersmailinglist">The <code>qubes-users</code> mailing list</h2>
 <p>This list is for helping users solve various daily problems with Qubes OS. Example of topics or questions suitable for this list:</p>
 <ul>
@@ -39,5 +39,16 @@
 <li>To unsubscribe, send an empty mail to <code>qubes-devel+unsubscribe@googlegroups.com</code></li>
 <li>The Web interface of the list: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
 </ul>
-<h2 id="Generalhintsandguidlinesregardingpostingtothelists">General hints and guidlines regarding posting to the lists</h2>
-<p>TODO</p>
+<h2 id="Generalhintsandguidelinesregardingpostingtothelists">General hints and guidelines regarding posting to the lists</h2>
+<ul>
+<li>Use an informative and precise subject in your message. This will allow others to easily find your thread in the future and use it as a reference. Example of a bad subject: &quot;Help! Qubes problems!&quot;. Example of a good subject: &quot;R2B2 Installation problem: Apple keyboard not working in installer&quot;.</li>
+</ul>
+<ul>
+<li>Be precise and concrete. Do not write an essay, only the essential informations that are needed. Qubes developers are Very Busy People (VBP) and we'd really better spend our time on improving Qubes, rather than reading essays!</li>
+</ul>
+<ul>
+<li>Do not sorry about your English. Really, nobody gives a damn, whether you're sorry, or not, that your English sucks. If we can't understand you, we will ask (or ignore your message if it's a total mess ;) And, if you really are so ashamed of your written English, then... just learn it, instead of sorry everybody.</li>
+</ul>
+<ul>
+<li>While we're generally open to hear suggestions of new features, please note that we already have a pretty well defined Roadmap, and it's rather unlikely we will change our schedule in order to accommodate your request. Much more preferred way to get new features into Qubes, those requested by users, is to... contribute code to Qubes that implements them, which we will happily accept, provided it meets our standards. It's always good to first discuss such ideas on the qubes-devel list, before starting the work though.</li>
+</ul>
