--- a/QubesLists.html
+++ b/QubesLists.html
@@ -15,7 +15,7 @@
 <li><a href="/wiki/wiki/UserFaq">Qubes User's FAQ</a></li>
 <li><a href="/wiki/wiki/UserDoc">Qubes User Guides</a> &lt;-- for question on how to use Qubes OS</li>
 </ul>
-<h3 id="PostingSubscribingetc">Posting, Subscribing, etc</h3>
+<p>Posting, Subscribing, etc:</p>
 <ul>
 <li>To post a message to the list, just send an email to (you don't need to be subscribed): <code>qubes-users@googlegroups.com</code></li>
 <li>To subscribe to the list, send an empty mail to (you don't need a gmail account for that!): <code>qubes-users+subscribe@googlegroups.com</code></li>
@@ -32,7 +32,7 @@
 <li>Some more or less generic security discussions, somehow relating to Qubes OS</li>
 </ul>
 <p>You need to be subscribed in order to post to this list.</p>
-<h3 id="PostingSubscribingetc1">Posting, Subscribing, etc</h3>
+<p>Posting, Subscribing, etc:</p>
 <ul>
 <li>To post a message to the list, send an email to (you need to be subscribed first!): <code>qubes-devel@googlegroups.com</code></li>
 <li>To subscribe to the list, send an empty mail to (you don't need a gmail account for that!): <code>qubes-devel+subscribe@googlegroups.com</code></li>
