--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -14,6 +14,7 @@
 </ul>
 <ul>
 <li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
+<li><a href="/wiki/wiki/CodingStyle">Qubes Coding Guidelines</a></li>
 <li><a href="/wiki/wiki/DevelBooks">Books for Developers</a></li>
 <li><a href="/wiki/wiki/QubesResearch">Research papers related to Qubes</a></li>
 </ul>
