--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -171,7 +171,7 @@ dir c:\
 
 C:\Windows\system32&gt;exit
 exit</code></pre>
-<p>Another things to check are if clipboard copy/paste and file copy works fine with this VM.</p>
+<p>Another things to check are if clipboard copy/paste and file copy works fine with this VM. If it doesn't, then perhaps one more VM reboot is necessary (seriously, hey this is Windows!).</p>
 <p>And the screenshot below illustrates the Send To entries in a Windows VM that can be used to copy/send files to other Qubes domains:</p>
 <p><a href="/wiki/attachment/wiki/HvmCreate/win7-sendto-another-vm.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;win7-sendto-another-vm.png&quot; attached to HvmCreate" alt="No image &quot;win7-sendto-another-vm.png&quot; attached to HvmCreate" /></a></p>
 <h2 id="AssigningPCIdevicestoHVMdomains">Assigning PCI devices to HVM domains</h2>
