--- a/CodingStyle.html
+++ b/CodingStyle.html
@@ -68,26 +68,31 @@
 </ul>
 <h2 id="Generalprogrammingstyleguidelines">General programming style guidelines</h2>
 <ul>
+<li>Do not try to impress wit your coding kung-fu, do not use tricks to save 2 lines of code, always prefer readability over trickiness!</li>
+<li>Make sure your code compiles and builds without warnings.</li>
+<li>Always first first about interfaces (e.g. function arguments, or class methods) and data structures before you start writing the actual code.</li>
 <li>Use comments to explain non-trivial code fragments, or expected behavior of more complex functions, if it is not clear from their name.</li>
 <li><p>Do <strong>not</strong> use comments for code fragments where it is immediately clear what the code does. E.g. avoid constructs like this:</p>
 <pre class="wiki"><code>// Return window id
 int get_window_id (...) {
     (...)
     return id;
-    }</code></pre></li>
+}</code></pre></li>
 </ul>
 <ul>
 <li><p>Do <strong>not</strong> use comments to disable code fragments. In a production code there should really be no commented or disabled code fragments. If you really, really have a good reason to retain some fragment of unused code, use #if or #ifdef to disable it, e.g.:</p>
 <pre class="wiki"><code>#if 0
     (...)   // Some unused code here
-#endif</code></pre></li>
-</ul>
+#endif</code></pre>
 <p>... and preferably use some descriptive macro instead of just <code>0</code>, e.g.:</p>
 <pre class="wiki"><code>#if USE_OLD_WINDOW_TRAVERSING
     (...)   // Some unused code here
 #endif</code></pre>
-<p>Not sure how to do similar thing in Python... Anyone?</p>
+<p>Not sure how to do similar thing in Python... Anyone?</p></li>
+</ul>
+<blockquote>
 <p>But generally, there is little excuse to keep old, unused code fragments in the code. One should really use the functionality provided by the source code management system, such as git, instead. E.g. create a special branch for storing the old, unused code -- this way you will always be able to merge this code into upstream in the future.</p>
+</blockquote>
 <h2 id="SourceCodemanagementGitguidelines">Source Code management (Git) guidelines</h2>
 <ul>
 <li>Use git to maintain all code for Qubes project.</li>
