--- a/CodingStyle.html
+++ b/CodingStyle.html
@@ -93,6 +93,9 @@ int get_window_id (...) {
 <blockquote>
 <p>But generally, there is little excuse to keep old, unused code fragments in the code. One should really use the functionality provided by the source code management system, such as git, instead. E.g. create a special branch for storing the old, unused code -- this way you will always be able to merge this code into upstream in the future.</p>
 </blockquote>
+<ul>
+<li>Do not hardcode values in the code! The only three numbers that are an exception here and for which it is acceptable to hardcode them are: <code>0</code>, <code>1</code> and <code>-1</code>, and frankly the last two are still controversial...</li>
+</ul>
 <h2 id="SourceCodemanagementGitguidelines">Source Code management (Git) guidelines</h2>
 <ul>
 <li>Use git to maintain all code for Qubes project.</li>
