--- a/CodingStyle.html
+++ b/CodingStyle.html
@@ -116,8 +116,17 @@ int get_window_id (...) {
 <ul>
 <li>As a general rule: <strong>untrusted input</strong> is our #1 enemy!</li>
 <li>Any input that comes from untrusted, or less trusted, or just differently-trusted, entity should always be considered as malicious and should always be sanitized and verified. So, if your software runs in Dom0 and processes some input from any of the VMs, this input should be considered to be malicious. Even if your software runs in a VM, and processes input from some other VM, you should also assume that the input is malicious and verify it.</li>
+<li><p>Use <code>untrusted_</code> prefix for all variables that hold values read from untrusted party and which have not yet been verified to be decent, e.g.:</p>
+<pre class="wiki"><code>   read_struct(untrusted_conf);
+   /* sanitize start */
+   if (untrusted_conf.width &gt; MAX_WINDOW_WIDTH)
+       untrusted_conf.width = MAX_WINDOW_WIDTH;
+   if (untrusted_conf.height &gt; MAX_WINDOW_HEIGHT)
+       untrusted_conf.height = MAX_WINDOW_HEIGHT;
+   width = untrusted_conf.width;
+   height = untrusted_conf.height;</code></pre></li>
+<li>Use another variables, without the <code>untrusted_</code> prefix to hold the sanitized values, as seen above.</li>
 </ul>
-<p>To Be Continued.</p>
 <h2 id="Python-specificguidelines">Python-specific guidelines</h2>
 <p>TODO</p>
 <h2 id="C-specificguidelines">C-specific guidelines</h2>
