--- a/CodingStyle.html
+++ b/CodingStyle.html
@@ -30,7 +30,7 @@
 </ul></li>
 </ul>
 <ul>
-<li>Horizontal spacing -- maintain at least decent amount of horizontal spacing, such as e.g. add obligatory space after <code>if</code> or before <code>{</code> in C, and similar in other languages. Whether to also use spaces within expressions, such as (x*2+5) vs. (x * 2 + 5) is left to the developer's judgment.</li>
+<li>Horizontal spacing -- maintain at least decent amount of horizontal spacing, such as e.g. add obligatory space after <code>if</code> or before <code>{</code> in C, and similar in other languages. Whether to also use spaces within expressions, such as (x*2+5) vs. (x * 2 + 5) is left to the developer's judgment. Do not put spaces immediately after and before the brackets in expressions, so avoid constructs like this: <code>if ( condition )</code> and use <code>if (condition)</code> instead.</li>
 </ul>
 <ul>
 <li><strong>Use single new lines</strong> ('\n' aka LF) in any non-Windows source code. On Windows, exceptionally, use the CRLF line endings -- this will allow the source code to be easily view-able in various Windows-based programs.</li>
