--- a/UserFaq.html
+++ b/UserFaq.html
@@ -50,6 +50,11 @@
 <p>Absolutely.</p>
 <h3 id="Howaboutrunningapplicationslikegamesthatrequired3Dsupport">How about running applications like games that required 3D support?</h3>
 <p>Those won’t fly. We do not provide OpenGL virtualization for AppVMs. This is mostly a security decision, as implementing such feature would most likely introduce lots of complexity to the GUI virtualization infrastructure. However, Qubes allows for use of accelerated graphics (OpenGL) in Dom0’s Window Manager, so all the fancy desktop effects should still work under Qubes.</p>
+<p>You can read more discussions about potential GPU passthorugh on <a href="/wiki/wiki/Xen/Qubes">Xen/Qubes?</a> and other disucssions on the topic on the following threads from qubes-devel:</p>
+<ul>
+<li><a href="https://groups.google.com/group/qubes-devel/browse_frm/thread/31f1f2da39978573?scoring=d&amp;q=GPU&amp;">​GPU passing to HVM</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/browse_frm/thread/31e2d8a47c8b4474?scoring=d&amp;q=GPU&amp;">​Clarifications on GPU security</a></li>
+</ul>
 <h3 id="IsQubesamulti-usersystem">Is Qubes a multi-user system?</h3>
 <p>No, Qubes does not pretend to be a multi-user system. Qubes assumes that the user that controls Dom0, controls the whole system. It will be very difficult to <strong>securely</strong> implement multi-user support -- see this message:</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/899f6f3efc4d9a06">​https://groups.google.com/group/qubes-devel/msg/899f6f3efc4d9a06</a></p>
