--- a/BuildingArchlinuxTemplate.html
+++ b/BuildingArchlinuxTemplate.html
@@ -6,7 +6,8 @@
 <p>Change the following variables GIT_SUBDIR=marmarek DISTS_VM=archlinux</p>
 <h2 id="Getallrequiredsources">Get all required sources</h2>
 <pre class="wiki"><code>make get-sources</code></pre>
-<h2 id="Makeallrequiredqubescomponentsthefirstuseofthebuildercantakeseveralhoursdependingonyourbandwidthasitwillinstallanarchlinuxchroot:">Make all required qubes components (the first use of the builder can take several hours depending on your bandwidth as it will install an archlinux chroot):</h2>
+<h2 id="Makeallrequiredqubescomponents">Make all required qubes components</h2>
+<p>The first use of the builder can take several hours depending on your bandwidth as it will install an archlinux chroot:</p>
 <pre class="wiki"><code>make vmm-xen-vm
 make core-vchan-xen-vm
 make linux-utils-vm
@@ -25,7 +26,12 @@ make gui-agent-linux-vm</code></pre>
 <p>A better fix is planned for the next python release (the bug is considered release blocking), and will be updated in archlinux chroot as soon as available.</p>
 <p>[1] <a href="http://bugs.python.org/issue17547">​http://bugs.python.org/issue17547</a></p>
 <h2 id="Qubes-OSisnowusingdifferentxenstorevariablenameswhichmakestoarchlinuxVMfailingtoboot">Qubes-OS is now using different xenstore variable names, which makes to archlinux VM failing to boot</h2>
-<p>Apply the following fix in the template to revert the variable name to the old Qubes version (eg: sudo mkdir /mnt/vm; sudo mount /var/lib/qubes/vm-templates/archlinux-x64/root.img /mnt/vm; sudo chroot /mnt/vm then apply the fix, then umount /mnt/vm)</p>
+<p>Apply the following fix in the template to revert the variable name to the old Qubes version.</p>
+<p>You can edit the template the following way:</p>
+<pre class="wiki"><code>sudo mkdir /mnt/vm
+sudo mount /var/lib/qubes/vm-templates/archlinux-x64/root.img /mnt/vm
+sudo chroot /mnt/vm</code></pre>
+<p>Then apply the fix:</p>
 <pre class="wiki"><code>sudo sed &#39;s:qubes-keyboard:qubes_keyboard:g&#39; -i /etc/X11/xinit/xinitrc.d/qubes-keymap.sh
 
 sudo sed &#39;s:qubes-netvm-domid:qubes_netvm_domid:g&#39; -i /etc/NetworkManager/dispatcher.d/30-qubes-external-ip
@@ -54,9 +60,13 @@ sudo sed &#39;s:qubes-iptables:qubes_iptables:g&#39; -i /usr/sbin/qubes-firewall
 
 sudo sed &#39;s:qubes-netvm-domid:qubes_netvm_domid:g&#39; -i /usr/sbin/qubes-netwatcher
 sudo sed &#39;s:qubes-netvm-external-ip:qubes_netvm_external_ip:g&#39; -i /usr/sbin/qubes-netwatcher</code></pre>
+<p>Do not forgot to:</p>
+<pre class="wiki"><code>umount /mnt/vm</code></pre>
 <h2 id="Thenm-appletnetworkmanagericonfailstostartwhenarchlinuxisdefinedasatemplate-vm:">The nm-applet (network manager icon) fails to start when archlinux is defined as a template-vm:</h2>
 <p>In fact /etc/dbus-1/system.d/org.freedesktop.<a href="/wiki/wiki/NetworkManager">NetworkManager?</a>.conf does not allow a standard user to run network manager clients. To allow this, one need to change inside &lt;policy context=&quot;default&quot;&gt;:</p>
 <pre class="wiki"><code>&lt;deny send_destination=&quot;org.freedesktop.NetworkManager&quot;/&gt;</code></pre>
 <p>to</p>
 <pre class="wiki"><code>&lt;allow send_destination=&quot;org.freedesktop.NetworkManager&quot;/&gt;</code></pre>
 <h2 id="DispVMYumproxyandmostQubesaddonsthunderbird...havenotbeentestedatall.">DispVM, Yum proxy and most Qubes addons (thunderbird ...) have not been tested at all.</h2>
+<h2 id="chroot-archlinuxdevptshasnotbeenunmounted">chroot-archlinux/dev/pts has not been unmounted</h2>
+<p>This is a known problem when there are errors during building. Just unmount what you can (or reboot your vm if you are too lazy :) )</p>
