--- a/HCL.html
+++ b/HCL.html
@@ -94,6 +94,11 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​read more</a></p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​Erik Edin</a></p>
+<p>Dell Latitude E6320<br /> (Intel HD graphics; Sandy Bridge; i5-2540M; BIOS: A06)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/F-jVh62ANak/s57rqUWTY7kJ">Alex​</a></p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
 <p>OK</p>
