--- a/HCL.html
+++ b/HCL.html
@@ -199,6 +199,10 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a></p>
+<p>Zareason Ultra Lap 420<br /> (Ivy Bridge; HD Graphics; i5-3317U)</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/uKI-VBtKWxg/uKjsdGNSpSQJ">​Ant</a></p>
 <p>Dell Precision T3400 Workstation<br /> (NVIDIA Quadro NVS 290; Intel Q6600; BIOS: A09)</p>
 <p>?</p>
 <p>?</p>
